# ipg-ai

indoprima_ai/: README.md  pyproject.toml
indoprima_ai/src/indoprima_ai/: crew.py  main.py
indoprima_ai/tasks/: celery_app.py
pelatihanindoprima/: README.md  pyproject.toml
pelatihanindoprima/api/: main.py
pelatihanindoprima/output/: post.md
pelatihanindoprima/src/pelatihanindoprima/: main.py
pelatihanindoprima/src/pelatihanindoprima/crews/analisator/: analisator.py
pelatihanindoprima/src/pelatihanindoprima/crews/analisator/config/: agents.yaml  tasks.yaml
pelatihanindoprima/src/pelatihanindoprima/crews/content_crew/: content_crew.py
pelatihanindoprima/src/pelatihanindoprima/crews/content_crew/config/: agents.yaml  tasks.yaml
pelatihanindoprima/src/pelatihanindoprima/crews/crew_anomali/: crew_anomali.py
pelatihanindoprima/src/pelatihanindoprima/crews/crew_anomali/config/: agents.yaml  tasks.yaml
pelatihanindoprima/src/pelatihanindoprima/crews/crew_deteksi_helmet/: crew_deteksi_helmet.py
pelatihanindoprima/src/pelatihanindoprima/crews/crew_deteksi_helmet/config/: agents.yaml  tasks.yaml
pelatihanindoprima/src/pelatihanindoprima/crews/file_anlyzer/: file_anlyzer.py
pelatihanindoprima/src/pelatihanindoprima/crews/file_anlyzer/config/: agents.yaml  tasks.yaml
pelatihanindoprima/src/pelatihanindoprima/crews/it_support/: it_support.py
pelatihanindoprima/src/pelatihanindoprima/tools/: tool_anomali.py  tool_helmet.py  tool_prophet.py  tool_save_to_db.py
pelatihanindoprima/tasks/: celery_app.py  celery_task.py
(+2 files in other folders)
