[project]
name = "indoprima_ai"
version = "0.1.0"
description = "indoprima_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "celery[redis]>=5.6.3",
    "crewai-tools>=1.14.4",
    "crewai[tools]==1.14.4",
    "fastapi[all]>=0.136.1",
    "redis<6.5",
    "uvicorn>=0.46.0",
]

[project.scripts]
indoprima_ai = "indoprima_ai.main:run"
run_crew = "indoprima_ai.main:run"
train = "indoprima_ai.main:train"
replay = "indoprima_ai.main:replay"
test = "indoprima_ai.main:test"
run_with_trigger = "indoprima_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
